--- a/src/main/webapp/app/views/collaborateur/liste_projet.html
+++ b/src/main/webapp/app/views/collaborateur/liste_projet.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-    <html lang="en">
+    <html lang="en" ng-app="lambda.bilan">
     <head>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
@@ -20,7 +20,7 @@
       <![endif]-->
     </head>
 
-    <body class="sticky-header  left-side-collapsed">
+    <body ng-controller="listeProjetController" class="sticky-header  left-side-collapsed">
 
     <section>
         <!-- left side start-->
@@ -28,11 +28,11 @@
 
             <!--logo and iconic logo start-->
             <div class="logo">
-                <a href="index.html"><img src="images/logo.png" alt=""></a>
+                <a href="index.html"><img src="../../assets/images/logo.png" alt=""></a>
             </div>
 
             <div class="logo-icon text-center">
-                <a href="index.html"><img src="images/logo_icon.png" alt=""></a>
+                <a href="index.html"><img src="../../assets/images/logo_icon.png" alt=""></a>
             </div>
             <!--logo and iconic logo end-->
 
@@ -41,7 +41,7 @@
                 <!-- visible to small devices only -->
                 <div class="visible-xs hidden-sm hidden-md hidden-lg">
                     <div class="media logged-user">
-                        <img alt="" src="images/photos/user-avatar.png" class="media-object">
+                        <img alt="" src="../../assets/images/photos/user-avatar.png" class="media-object">
                         <div class="media-body">
                             <h4><a href="#">Anas masaaf</a></h4>
                         </div>
@@ -87,7 +87,7 @@
                     <div class="col-md-12">
                         <!--breadcrumbs start -->
                         <ul class="breadcrumb panel">
-                            <li class="active"><i class="fa fa-home"></i>Liste des projets</li>
+                            <li class="active"></i>Liste des projets</li>
                         </ul>
                         <!--breadcrumbs end -->
                     </div>
@@ -105,12 +105,12 @@
                                 <ul class="goal-progress">
                                     <li ng-repeat="projet in projets">
                                         <div class="prog-avatar">
-                                            <img src="images/photos/user2.png" alt=""/>
+                                            <img src="../../assets/images/photos/user2.png" alt=""/>
                                         </div>
                                         <div class="details">
                                             <div class="title">
-                                                <span>Evaluateur : </span><a>{{projet.nomEvaluateur}}</a>  - {{
-                                                projet.nomProjet+" "+projet.idProjet}}
+                                                <span>Evaluateur : </span><a>{{projet.nomEvaluateur}}</a>{{
+                                                projet.nomProjet+"  #"+projet.idProjet}}
                                             </div>
                                         </div>
                                     </li>
@@ -133,7 +133,7 @@
     <script type="text/javascript"  src="../../assets/bower_components/jquery/dist/jquery.min.js"></script>
     <script type="text/javascript" src="../../assets/bower_components/angular/angular.min.js"></script>
     <script type="text/javascript" src="../../assets/bower_components/angular-cookies/angular-cookies.min.js"></script>
-
+    <script type="text/javascript" src="../../controllers/collaborateur/listProjetController.js"></script>
     <script type="text/javascript" src="../../services/constants.js"></script>
     <script type="text/javascript" src="../../services/dao.js"></script>
     <script type="text/javascript" src="../../services/utils.js"></script>
@@ -147,15 +147,5 @@
     <script src="../../assets/js/modernizr.min.js"></script>
     <script src="../../assets/js/jquery.nicescroll.js"></script>
     <script src="../../assets/js/scripts.js"></script>
-    <script>
-        jQuery(document).ready(function(){
-            $('.wysihtml5').wysihtml5();
-        });
-    </script>
-
-
-
-
-
     </body>
     </html>
