--- a/src/main/webapp/app/views/collaborateur/liste_projet.html
+++ b/src/main/webapp/app/views/collaborateur/liste_projet.html
@@ -57,7 +57,7 @@
                 <ul class="nav nav-pills nav-stacked custom-nav">
                     <li><a href="accueil.html"><i class="fa fa-home"></i> <span>Accueil</span></a></li>
                     <li class="active"><a href="liste_projet.html"><i class="fa fa-tasks"></i> <span>Liste des projets</span></a></li>
-                    <li ><a href="fiche_objectif.html"><i class="fa fa-archive"></i> <span>Fiches des objectifs</span></a></li>
+                    <li><a href="bilans_performances.html"><i class="fa fa-archive"></i> <span>Liste des BAP</span></a></li>
                     <li><a href="profil.html"><i class="fa fa-user"></i> <span>Mon profil</span></a></li>
                     <li><a href="login.html"><i class="fa fa-sign-in"></i> <span>Se deconnecter</span></a></li>
                 </ul>
@@ -109,7 +109,7 @@
                                         </div>
                                         <div class="details">
                                             <div class="title">
-                                                <span>Evaluateur : </span><a>{{projet.nomEvaluateur}}</a>{{
+                                                <span>Evaluateur :  </span><a>{{projet.nomEvaluateur+" "}}</a>,  Projet :   {{
                                                 projet.nomProjet+"  #"+projet.idProjet}}
                                             </div>
                                         </div>
