--- a/src/main/webapp/app/views/collaborateur/accueil.html
+++ b/src/main/webapp/app/views/collaborateur/accueil.html
@@ -1,5 +1,5 @@
     <!DOCTYPE html>
-    <html lang="en">
+    <html lang="en" ng-app="lambda.bilan">
     <head>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
@@ -8,11 +8,8 @@
       <link rel="shortcut icon" href="#" type="image/png">
 
       <title>Collaborateur</title>
-
-
         <link href="../../assets/css/style.css" rel="stylesheet">
         <link href="../../assets/css/style-responsive.css" rel="stylesheet">
-        
       <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
       <!--[if lt IE 9]>
         <script src="../../assets/js/html5shiv.js"></script>
@@ -20,7 +17,7 @@
       <![endif]-->
     </head>
 
-    <body class="sticky-header  left-side-collapsed">
+    <body ng-controller="accueilController" class="sticky-header  left-side-collapsed">
 
     <section>
         <!-- left side start-->
@@ -28,11 +25,11 @@
 
             <!--logo and iconic logo start-->
             <div class="logo">
-                <a href="index.html"><img src="images/logo.png" alt=""></a>
+                <a href="index.html"><img src="../../assets/images/logo.png" alt=""></a>
             </div>
 
             <div class="logo-icon text-center">
-                <a href="index.html"><img src="images/logo_icon.png" alt=""></a>
+                <a href="index.html"><img src="../../assets/images/logo_icon.png" alt=""></a>
             </div>
             <!--logo and iconic logo end-->
 
@@ -41,7 +38,7 @@
                 <!-- visible to small devices only -->
                 <div class="visible-xs hidden-sm hidden-md hidden-lg">
                     <div class="media logged-user">
-                        <img alt="" src="images/photos/user-avatar.png" class="media-object">
+                        <img alt="" src="../../assets/images/photos/user-avatar.png" class="media-object">
                         <div class="media-body">
                             <h4><a href="#">Anas masaaf</a></h4>
                         </div>
@@ -57,7 +54,7 @@
                 <ul class="nav nav-pills nav-stacked custom-nav">
                     <li class="active"><a href="accueil.html"><i class="fa fa-home"></i> <span>Accueil</span></a></li>
                     <li ><a href="liste_projet.html"><i class="fa fa-tasks"></i> <span>Liste des projets</span></a></li>
-                    <li ><a href="fiche_objectif.html"><i class="fa fa-archive"></i> <span>Fiches des objectifs</span></a></li>
+                    <li ><a href="bilans_performances.html"><i class="fa fa-archive"></i> <span>Liste des BAP</span></a></li>
                     <li><a href="profil.html"><i class="fa fa-user"></i> <span>Mon profil</span></a></li>
                     <li><a href="login.html"><i class="fa fa-sign-in"></i> <span>Se deconnecter</span></a></li>
                 </ul>
@@ -70,45 +67,22 @@
         <!-- main content start-->
         <div class="main-content" >
 
-            <!-- header section start-->
             <div class="header-section">
-
                 <!--toggle button start-->
                 <a class="toggle-btn"><i class="fa fa-bars"></i></a>
                 <!--toggle button end-->
-
-                <!--notification menu start -->
-                <div class="menu-right">
-                    <ul class="notification-menu">
-                        <li>
-                            <a href="#" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
-                                <img src="images/photos/user-avatar.png" alt="" />
-                                John Doe
-                                <span class="caret"></span>
-                            </a>
-                            <ul class="dropdown-menu dropdown-menu-usermenu pull-right">
-                                <li><a href="#"><i class="fa fa-user"></i>  Profile</a></li>
-                                <li><a href="#"><i class="fa fa-sign-out"></i> Se deconnecter</a></li>
-                            </ul>
-                        </li>
-
-                    </ul>
-                </div>
-                <!--notification menu end -->
+                <!-- header page-->
+                <ng-include src="'../includes/header_page.html'"></ng-include>
 
             </div>
-            <!-- header section end-->
-            <!-- page heading start-->
-            <div class="page-heading">
-                <h3>
-                    Collaborateur <small>Accueil</small>
-                </h3>
-            </div>
-            <!-- page heading end-->
-
             <!--body wrapper start-->
             <div class="wrapper">
-                <!-- present working link Start-->
+
+                <div class="page-heading">
+                    <h3>
+                        Collaborateur  <small>Accueil</small>
+                    </h3>
+                </div>
                 <div class="row">
                     <div class="col-md-12">
                         <!--breadcrumbs start -->
@@ -118,13 +92,15 @@
                         <!--breadcrumbs end -->
                     </div>
                 </div>
+                <!-- header body -->
+                <ng-include src="'../includes/errors_succes.html'"></ng-include>
                 <!-- present working link End-->
                 <div class="row">
                     <div class="col-sm-12">
                         <div class="col-md-12">
                             <div class="panel">
                                 <header class="panel-heading">
-                                    Liste des objectifs
+                                    Liste des objectifs de l'année en cours :
                                 </header>
                                 <div class="panel-body">
                                     <div class="adv-table">
@@ -138,20 +114,11 @@
                                             </tr>
                                         </thead>
                                             <tbody>
-                                            <tr class="gradeX">
-                                                <td>bject 1</td>
-                                                <td>Projet obj blabla description</td>
+                                            <tr ng-repeat="objectif in objectifs" class="gradeX">
+                                                <td>{{objectif.nomObjectif}}</td>
+                                                <td>{{objectif.descriptifObjectif}}</td>
                                                 <td class="text-center">
-                                                    <button data-placement="top" data-original-title="Rejeter" class="btn btn-danger btn-xs tooltips" data-toggle="button">
-                                                        <i class="fa fa-thumbs-o-down"></i>
-                                                    </button>
-                                                </td>
-                                            </tr>
-                                            <tr class="gradeX">
-                                                <td>bject 1</td>
-                                                <td>Projet obj blabla description</td>
-                                                <td class="text-center">
-                                                    <button data-placement="top" data-original-title="Rejeter" class="btn btn-danger btn-xs tooltips" data-toggle="button">
+                                                    <button ng-click="rejeter(objectif.idObjectif)" data-placement="top" data-original-title="Rejeter" class="btn btn-danger btn-xs tooltips" data-toggle="button">
                                                         <i class="fa fa-thumbs-o-down"></i>
                                                     </button>
                                                 </td>
@@ -182,9 +149,7 @@
     <script type="text/javascript" src="../../assets/bower_components/angular/angular.min.js"></script>
     <script type="text/javascript" src="../../assets/bower_components/angular-cookies/angular-cookies.min.js"></script>
     <script src="../../directives/isteven-multi-select.js"></script>
-
-
-
+    <script src="../../controllers/collaborateur/accueilController.js"></script>
     <script type="text/javascript" src="../../services/constants.js"></script>
     <script type="text/javascript" src="../../services/dao.js"></script>
     <script type="text/javascript" src="../../services/utils.js"></script>
@@ -199,14 +164,5 @@
     <script src="../../assets/js/jquery.nicescroll.js"></script>
     <!--common scripts for all pages-->
     <script src="../../assets/js/scripts.js"></script>
-    <script>
-        jQuery(document).ready(function(){
-            $('.wysihtml5').wysihtml5();
-        });
-    </script>
-    
-
-
-
     </body>
     </html>
